2008-03-23  Guillem Jover  <guillem@debian.org>

	* configure.ac (DPKG_CHECK_COMPAT_FUNCS): Add 'strnlen'.
	* libcompat/Makefile.am [!HAVE_STRNLEN] (libcompat_a_SOURCES): Add
	'strnlen.c' and 'strnlen.h'.
	* libcompat/strnlen.c: New file (import from Simon Josefsson).
	* libcompat/strnlen.h: Likewise.
	* lib/tarfn.c: Include "strnlen.h".

2008-03-22  Raphael Hertzog  <hertzog@debian.org>

	* scripts/t/200_Dpkg_Shlibs.t: Fix test suite to handle the
	recent addition of the "objid" field to symbol hash returned
	by Dpkg::Shlibs::Objump::Object->get_symbol().

2008-03-22  Ian Jackson  <ian@davenant.greenend.org.uk>

	* lib/dpkg-db.h (enum pkgstatus): Sort entries.
	* lib/dump.c (w_status): Change 'stat_configfiles' to 'stat_installed'
	in assert as that's the new last item.
	* src/processarc.c (process_archive): Likewise.
	* src/packages.c (process_queue): Likewise.
	(deppossi_ok_found): Match sorting of 'enum pkgstatus'.
	* dselect/pkgdisplay.cc (statusstrings): Likewise.
	(statuschars): Likewise.
	* src/help.c (statusstrings): Likewise.
	* src/query.c (list1package): Likewise.
	* lib/parsehelp.c (statusinfos): Likewise.

2008-03-21  Guillem Jover  <guillem@debian.org>

	* lib/parse.c (cu_parsedb): Remove duplicate function.
	(parsedb): Use cu_closefd instead of cu_parsedb.

2008-03-21  Ian Jackson  <ian@davenant.greenend.org.uk>

	* src/archives.c (tarobject): Make 'fd' static.
	* lib/parse.c (parsedb): Likewise. Use ehflag_normaltidy on
	push_cleanup and pop_cleanup. Move pop_cleanup call just before its
	related close call.
	* src/processarc.c (process_archive): Do not install two cleanup
	handlers to close the fsys-tarfile pipe. Mark pipe descriptors with
	invalid values when closed.

2008-03-20  Guillem Jover  <guillem@debian.org>

	* dpkg-deb/extract.c (safe_fflush): Change return type from int to
	void.

2008-03-20  Ian Jackson  <ian@davenant.greenend.org.uk>

	* lib/dpkg.h (cisspace): New prototype.
	* lib/utils.c (cisspace): New function definition.
