@@ -1,3 +1,12 @@
+2008-03-24  Ian Jackson  <ian@davenant.greenend.org.uk>
+
+	* lib/dpkg.h (error_printer): New function pointer type.
+	(push_error_handler): Use error_printer instead of an explicit
+	declaration in the argument list.
+	(set_error_display): Likewise.
+	* lib/ehandle.c (push_error_handler): Likewise.
+	(set_error_display): Likewise.
+
 2008-03-23  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac (DPKG_CHECK_COMPAT_FUNCS): Add 'strnlen'.
